--- a/src/components/index/WorksHighlight.astro
+++ b/src/components/index/WorksHighlight.astro
@@ -21,7 +21,7 @@ const worksWithThumbnails: Work[] = rawWorks.map((work) => {
 });
 
 const works = worksWithThumbnails.sort(
-  (a, b) => b.data.endDate.getTime() - a.data.endDate.getTime(),
+  (a, b) => b.data.createdAt.getTime() - a.data.createdAt.getTime(),
 );
 ---
 
