--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,14 @@
-<header transition:name="main-header" class="text-body-sm sm:text-body-base py-10 fixed top-0 left-0 w-full z-50">
-  <div class="flex justify-between items-center z-10 px-5 sm:px-20 max-w-dp mx-auto">
-    <a href="/" class="hover:underline">
-      Chiba Yuto
-    </a>
+<header
+  transition:name="main-header"
+  class="text-body-sm sm:text-body-base fixed top-0 left-0 z-50 w-full py-10"
+>
+  <div
+    class="max-w-dp z-10 mx-auto flex items-center justify-between px-5 sm:px-20"
+  >
+    <a href="/" class="hover:underline"> Chiba Yuto </a>
     <nav class="flex gap-6">
-      <a href="/" class="hover:underline">
-        Home
-      </a>
-      <a href="/works" class="hover:underline">
-        Works
-      </a>
+      <a href="/" class="hover:underline"> Home </a>
+      <a href="/works" class="hover:underline"> Works </a>
     </nav>
   </div>
 </header>
