--- a/src/components/index/SkillsSection.astro
+++ b/src/components/index/SkillsSection.astro
@@ -6,29 +6,27 @@ interface Props {
 }
 
 const { skills } = Astro.props;
-const categories = Array.from(new Set(skills.map(skill => skill.category)));
+const categories = Array.from(new Set(skills.map((skill) => skill.category)));
 ---
 
 <div class="flex flex-col gap-2">
   <h2 class="text-2xl">使える言語・ツール</h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-12">
-    {categories.map((category) => (
-      <div>
-        <h2 class="text-xl font-bold py-4">{category}</h2>
-        <div class="flex gap-2 flex-wrap">
-          {skills
-            .filter(skill => skill.category === category)
-            .map((skill) => (
-              <div class="
-                text-xs sm:text-sm px-2 py-1
-                rounded-lg bg-gray-50 border-gray-200 border
-              ">
-                {skill.label}
-              </div>
-            )
-          )}
+  <div class="grid grid-cols-1 gap-6 sm:gap-12 md:grid-cols-2">
+    {
+      categories.map((category) => (
+        <div>
+          <h2 class="py-4 text-xl font-bold">{category}</h2>
+          <div class="flex flex-wrap gap-2">
+            {skills
+              .filter((skill) => skill.category === category)
+              .map((skill) => (
+                <div class="rounded-lg border border-gray-200 bg-gray-50 px-2 py-1 text-xs sm:text-sm">
+                  {skill.label}
+                </div>
+              ))}
+          </div>
         </div>
-      </div>
-    ))}
+      ))
+    }
   </div>
 </div>
