--- a/src/components/work/WorkHeader.astro
+++ b/src/components/work/WorkHeader.astro
@@ -8,21 +8,21 @@ interface Props {
 const { className, name, createdAt } = Astro.props;
 
 const formatToYYMM = (date?: string) => {
-  if (!date) return "";
+  if (!date) return '';
   const dateObj = new Date(date);
   const year = dateObj.getFullYear();
-  const month = String(dateObj.getMonth() + 1).padStart(2, "0");
+  const month = String(dateObj.getMonth() + 1).padStart(2, '0');
   return `${year}/${month}`;
 };
 
 const displayDate = formatToYYMM(createdAt);
 ---
 
-<div class={className ?? ""}>
-  <h1 class="text-2xl sm:text-4xl text-center sm:text-left">{name}</h1>
+<div class={className ?? ''}>
+  <h1 class="text-center text-2xl sm:text-left sm:text-4xl">{name}</h1>
   {
     displayDate && (
-      <p class="mt-1 sm:mt-2 text-gray-500 text-center sm:text-left">
+      <p class="mt-1 text-center text-gray-500 sm:mt-2 sm:text-left">
         {displayDate}
       </p>
     )
