--- a/src/components/work/WorkImage.astro
+++ b/src/components/work/WorkImage.astro
@@ -5,23 +5,23 @@ interface Props {
   thumbnail?: string;
 }
 
-const { className = "", name, thumbnail } = Astro.props;
+const { className = '', name, thumbnail } = Astro.props;
 
-const imageSrc = typeof thumbnail === "string" ? thumbnail : undefined;
+const imageSrc = typeof thumbnail === 'string' ? thumbnail : undefined;
 ---
 
 <div class={`w-full ${className}`}>
   {
     imageSrc ? (
       <img
-        class="rounded-lg border-gray-200 border w-full h-auto"
+        class="h-auto w-full rounded-lg border border-gray-200"
         src={imageSrc}
         alt={name}
         decoding="async"
         loading="eager"
       />
     ) : (
-      <div class="w-full h-64 bg-gray-200 rounded-lg flex items-center justify-center">
+      <div class="flex h-64 w-full items-center justify-center rounded-lg bg-gray-200">
         <p class="text-gray-500">画像がありません</p>
       </div>
     )
