--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,21 +7,14 @@ import { skills } from '../data/skills';
 import Layout from '../layouts/Layout.astro';
 
 const meta = {
-  title: "Home | Chiba Yuto",
+  title: 'Home | Chiba Yuto',
 };
 ---
 
-<Layout
-  title={meta.title}
-  footerMaxWidth="pc"
->
+<Layout title={meta.title} footerMaxWidth="pc">
   <div class="text-body-sm sm:text-body-base tracking-wider">
     <div
-      class="
-        flex flex-col gap-8
-        px-5 py-28 max-w-pc mx-auto
-        sm:px-20 sm:py-40
-      "
+      class="max-w-pc mx-auto flex flex-col gap-8 px-5 py-28 sm:px-20 sm:py-40"
     >
       <ProfileSection />
     </div>
@@ -29,17 +22,12 @@ const meta = {
     <WorksHighlight />
 
     <div
-      class="
-        flex flex-col gap-8
-        px-5 pt-24 pb-12 max-w-pc mx-auto
-        sm:px-20 sm:pt-32 sm:pb-20
-      "
+      class="max-w-pc mx-auto flex flex-col gap-8 px-5 pt-24 pb-12 sm:px-20 sm:pt-32 sm:pb-20"
     >
-      <div class="flex flex-col gap-20 sm:gap-28 w-full">
+      <div class="flex w-full flex-col gap-20 sm:gap-28">
         <SkillsSection skills={skills} />
         <ContactSection />
       </div>
     </div>
-
   </div>
 </Layout>
