--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
-@import "tailwindcss";
-@plugin "@tailwindcss/typography";
+@import 'tailwindcss';
+@plugin '@tailwindcss/typography';
 
 @theme {
   --color-background: #f8f8f8;
   --color-foreground: #242424;
-  --color-primary: #28A8D0;
+  --color-primary: #28a8d0;
 
   --text-body-base: 15px;
   --text-body-base--line-height: 1.9;
@@ -35,13 +35,18 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-weight: 500 !important;
-  font-feature-settings: "palt";
-  font-family: 'Manrope', 'dnp-shuei-gothic-gin-std', "sans-serif";
+  font-feature-settings: 'palt';
+  font-family: 'Manrope', 'dnp-shuei-gothic-gin-std', 'sans-serif';
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 600 !important;
-  font-feature-settings: "palt";
+  font-feature-settings: 'palt';
 }
 
 /* Prose */
@@ -50,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .prose h3 {
-  @apply text-xl sm:text-2xl font-medium mt-6 mb-2 w-full;
+  @apply mt-6 mb-2 w-full text-xl font-medium sm:text-2xl;
 }
 
 .prose img {
@@ -59,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Table */
 .prose table {
-  @apply w-fit bg-gray-50 border border-gray-200 rounded-lg py-4 px-6 border-separate border-spacing-0 mb-8;
+  @apply mb-8 w-fit border-separate border-spacing-0 rounded-lg border border-gray-200 bg-gray-50 px-6 py-4;
 }
 
 .prose table thead {
@@ -75,11 +80,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .prose table tbody tr td {
-  @apply p-0 border-none bg-transparent;
+  @apply border-none bg-transparent p-0;
 }
 
 .prose table tbody tr td:first-child {
-  @apply font-semibold text-foreground mb-1;
+  @apply text-foreground mb-1 font-semibold;
 }
 
 .prose table tbody tr td:last-child {
@@ -98,13 +103,27 @@ h1, h2, h3, h4, h5, h6 {
 
 /* View Transition */
 @keyframes outAnimation {
-  from { opacity: 1; filter: blur(0); }
-  to   { opacity: 0; filter: blur(2px); }
+  from {
+    opacity: 1;
+    filter: blur(0);
+  }
+  to {
+    opacity: 0;
+    filter: blur(2px);
+  }
 }
 
 @keyframes inAnimation {
-  from { opacity: 0; filter: blur(3px); transform: translateY(30px); }
-  to   { opacity: 1; filter: blur(0); transform: translateY(0); }
+  from {
+    opacity: 0;
+    filter: blur(3px);
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+  }
 }
 
 .page-fade-out {
@@ -112,5 +131,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page-fade-in {
-  animation: inAnimation 1.5s cubic-bezier(.1,1,.3,1) forwards;
+  animation: inAnimation 1.5s cubic-bezier(0.1, 1, 0.3, 1) forwards;
 }
