feat: 目次コンポーネントをReactからAstroに移行し、サムネイル処理と日付表示を改善

--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -2,7 +2,7 @@
 import path from 'path';
 import { getCollection } from 'astro:content';
 import type { Work } from '../types/work';
-import { getAssetFolderName, getThumbnailPath } from '../utils/work';
+import { getThumbnailPath } from '../utils/work';
 
 // Components
 import WorkList from '../components/works/WorkList.tsx';
