--- a/src/components/index/WorksHighlight.astro
+++ b/src/components/index/WorksHighlight.astro
@@ -1,23 +1,25 @@
 ---
 import { getCollection } from 'astro:content';
 import type { Work } from '../../types/work';
-import { getAssetFolderName, getThumbnailPath } from '../../utils/work';
+import { getThumbnailPath } from '../../utils/work';
 
-const rawWorks = await getCollection('works');
+const rawWorks = (await getCollection('works')).filter(
+  (work) => !work.id.startsWith('template/')
+);
 
 const worksWithThumbnails: Work[] = rawWorks.map((work) => {
-  const { body } = work;
-  if (!body) return work;
-  const obsidianImageMatch = body.match(/!\[\[([^\]]+)\]\]/);
-  if (obsidianImageMatch) {
-    const filename = obsidianImageMatch[1];
-    const assetFolderName = getAssetFolderName(work);
-    return {
-      ...work,
-      thumbnail: getThumbnailPath(work, filename),
-    };
-  }
-  return work;
+  const { thumbnail } = work.data;
+  if (!thumbnail) return work;
+
+  const obsidianImageMatch = thumbnail.match(/!?\[\[([^\]]+)\]\]/);
+  if (!obsidianImageMatch) return work;
+
+  const filename = obsidianImageMatch[1];
+
+  return {
+    ...work,
+    thumbnail: getThumbnailPath(work, filename),
+  };
 });
 
 const works = worksWithThumbnails.sort(
