--- a/src/components/work/WorkHeader.astro
+++ b/src/components/work/WorkHeader.astro
@@ -7,15 +7,16 @@ interface Props {
 
 const { className, name, createdAt } = Astro.props;
 
-const formatToYYMM = (date?: string) => {
+const formatDate = (date?: string) => {
   if (!date) return '';
   const dateObj = new Date(date);
   const year = dateObj.getFullYear();
   const month = String(dateObj.getMonth() + 1).padStart(2, '0');
-  return `${year}/${month}`;
+  const day = String(dateObj.getDate()).padStart(2, '0');
+  return `${year}/${month}/${day}`;
 };
 
-const displayDate = formatToYYMM(createdAt);
+const displayDate = formatDate(createdAt);
 ---
 
 <div class={className ?? ''}>
