--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,12 @@ import '../styles/global.css';
 import '@fontsource/manrope/500.css';
 import '@fontsource/manrope/600.css';
 
-const { title, description, footerMaxWidth } = Astro.props;
+const {
+  title,
+  description = "Chiba Yuto's Portfolio",
+  footerMaxWidth,
+} = Astro.props;
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
 <!doctype html>
@@ -17,9 +22,28 @@ const { title, description, footerMaxWidth } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
+
+    {/* Canonical URL */}
+    <link rel="canonical" href={canonicalURL} />
+
+    {/* Primary Meta Tags */}
     <title>{title}</title>
-    <ClientRouter />
+    <meta name="title" content={title} />
     <meta name="description" content={description} />
+
+    {/* Open Graph / Facebook */}
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={canonicalURL} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+
+    {/* Twitter */}
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content={canonicalURL} />
+    <meta property="twitter:title" content={title} />
+    <meta property="twitter:description" content={description} />
+
+    <ClientRouter />
     <script is:inline id="adobe-fonts">
       (function (d) {
         var config = {
