feat: 画像のレスポンシブ表示を最適化し、Typekitフォント読み込み時のテキスト非表示を防止、カテゴリボタンのテキスト色を調整

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,7 +64,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
           f = false,
           s = d.getElementsByTagName('script')[0],
           a;
-        h.className += ' wf-loading';
+        // h.className += ' wf-loading'; // Prevent hiding text
         tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
         tk.async = true;
         tk.onload = tk.onreadystatechange = function () {
