--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -4,18 +4,21 @@ import { getCollection } from 'astro:content';
 import type { Work } from '../types/work';
 import { getThumbnailPath } from '../utils/work';
 
-// Components
+// コンポーネント
 import WorkList from '../components/works/WorkList.tsx';
 import Layout from '../layouts/Layout.astro';
 
+// 静的生成
 const rawWorks = (await getCollection('works')).filter(
   (work) => !work.id.startsWith('template/')
 );
 
+// 画像最適化
 import { getImage } from 'astro:assets';
 import { getAssetFolderName } from '../utils/work';
 import { getWorkImage } from '../utils/assets';
 
+// サムネイル画像
 const worksWithThumbnails: Work[] = await Promise.all(
   rawWorks.map(async (work) => {
     const { thumbnail } = work.data;
@@ -39,7 +42,8 @@ const worksWithThumbnails: Work[] = await Promise.all(
     if (imageMetadata) {
       const img = await getImage({
         src: imageMetadata,
-        // 必要に応じてオプション追加 (例: format: 'webp', width: ...)
+        format: 'avif',
+        quality: 75,
       });
       optimizedImage = {
         src: img.src,
@@ -57,14 +61,17 @@ const worksWithThumbnails: Work[] = await Promise.all(
   })
 );
 
+// 作品
 const works = worksWithThumbnails.sort(
   (a, b) => b.data.createdAt.getTime() - a.data.createdAt.getTime()
 );
 
+// タグ
 const allTags = [
   ...new Set(works.flatMap((work) => work.data.tags || [])),
 ] as string[];
 
+// メタ情報
 const meta = {
   title: 'Works | Chiba Yuto',
 };
