--- a/src/components/mdx/MdxImage.astro
+++ b/src/components/mdx/MdxImage.astro
@@ -11,4 +11,12 @@ interface Props {
 const { src, alt = '', class: className } = Astro.props;
 ---
 
-<Image src={src} alt={alt} class={className} format="avif" quality={75} />
+<Image
+  src={src}
+  alt={alt}
+  class={className}
+  format="avif"
+  quality={75}
+  loading="lazy"
+  decoding="async"
+/>
