--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -122,8 +122,8 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
                     resolve(null);
                   };
                   el.addEventListener('animationend', onEnd, { once: true });
-                })
-            )
+                }),
+            ),
           );
         }
 
@@ -143,7 +143,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
           () => {
             el.classList.remove(FADE_IN);
           },
-          { once: true }
+          { once: true },
         );
       });
     });
